--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             }
             
             function change (){
-                document.getElementById("container").style.backgroundColor = "#b2adad";
+                document.getElementById("container").style.backgroundColor = "#0E0E0E";
                     document.getElementById("switch2").style.display = "block";
                     document.getElementById("switch").style.display = "none";
                 document.getElementById("back").style.backgroundImage = "url(img/dark.jpg)";
